# am335x_pru_package

./: CMakeLists.txt
debian/: changelog  control  copyright  pru-assembler.cmake-components  rules
pru_sw/: CMakeLists.txt
pru_sw/utils/: CMakeLists.txt
